--- a/quarto/misc/quick_notes.qmd
+++ b/quarto/misc/quick_notes.qmd
@@ -698,12 +698,11 @@ f(x, y) = 2 - x^2 + y^2
 contour(xs, ys, f.(xs, ys'))
 ```
 
-  * An implicit equation. The constraint $f(x,y)=c$ generates an implicit equation. While `contour` can be used for this type of plot - by adjusting the requested contours - the `ImplicitPlots` package does this to make a plot of the equations $f(x,y) = 0$"
+  * An implicit equation. The constraint $f(x,y)=c$ generates an implicit equation. While `contour` can be used for this type of plot - by adjusting the requested contours - the `ImplicitPlots` package does this to make a plot of the equations $f(x,y) = 0$. (The `CalculusWithJulia` package re-uses the `implict_plot` function.)
 
 
 ```{julia}
 #| hold: true
-using ImplicitPlots
 f(x,y) = sin(x*y) - cos(x*y)
 implicit_plot(f)
 ```
@@ -1307,4 +1306,3 @@ F(x,y,z) = [x, y, z]
 ex = F(Phi(u,v)...)  ⋅ (Jₚ[:,1] × Jₚ[:,2])
 integrate(ex, (u,0,1), (v, 0, 2PI))
 ```
-
