--- a/quarto/differentiable_vector_calculus/vectors.qmd
+++ b/quarto/differentiable_vector_calculus/vectors.qmd
@@ -13,19 +13,6 @@ using LinearAlgebra
 using SymPy
 ```
 
-```{julia}
-#| echo: false
-#| results: "hidden"
-using CalculusWithJulia.WeaveSupport
-
-const frontmatter = (
-        title = "Vectors and matrices",
-        description = "Calculus with Julia: Vectors and matrices",
-        tags = ["CalculusWithJulia", "differentiable_vector_calculus", "vectors and matrices"],
-);
-
-nothing
-```
 
 ---
 
@@ -716,13 +703,10 @@ and
 ```{julia}
 [𝓊'; 𝓋']
 ```
-
-```{julia}
-#| echo: false
-note("""
+:::{.callout-note}
+## Note
 The adjoint is defined *recursively* in `Julia`. In the `CalculusWithJulia` package, we overload the `'` notation for *functions* to yield a univariate derivative found with automatic differentiation. This can lead to problems: if we have a matrix of functions, `M`, and took the transpose with `M'`, then the entries of `M'` would be the derivatives of the functions in `M` - not the original functions. This is very much likely to not be what is desired. The `CalculusWithJulia` package commits **type piracy** here *and* abuses the generic idea for `'` in Julia. In general type piracy is very much frowned upon, as it can change expected behaviour. It is defined in `CalculusWithJulia`, as that package is intended only to act as a means to ease users into the wider package ecosystem of `Julia`.
-""")
-```
+:::
 
 ---
 
@@ -768,12 +752,11 @@ $$
 \vec{u} \times \vec{v} =  \| \vec{u} \| \| \vec{v} \| \sin(\theta) \hat{n}.
 $$
 
-```{julia}
-#| echo: false
-note("""
+:::{callout-note}
+## Note
 The right-hand rule is also useful to understand how standard household screws will behave when twisted with a screwdriver. If the right hand fingers curl in the direction of the twisting screwdriver, then the screw will go in or out following the direction pointed to by the thumb.
-""")
-```
+
+:::
 
 The right-hand rule depends on the order of consideration of the vectors. If they are reversed, the opposite direction is determined. A consequence is that the cross product is **anti**-commutative, unlike multiplication:
 
@@ -1519,4 +1502,3 @@ choices = [
 answ = 1
 radioq(choices, answ)
 ```
-
