--- a/quarto/misc/quick_notes.qmd
+++ b/quarto/misc/quick_notes.qmd
@@ -447,15 +447,15 @@ Row and column vectors can fill in:
 
 ```{julia}
 ys = [4 5] # a row vector
-h(x,y) = (x,y)
-h.(xs, ys)    # broadcasting a column and row vector makes a matrix, then applies f.
+g(x,y) = (x,y)
+g.(xs, ys)    # broadcasting a column and row vector makes a matrix, then applies f.
 ```
 
 This should be contrasted to the case when both `xs` and `ys` are (column) vectors, as then they pair off (and here cause a dimension mismatch as they have different lengths):
 
 
 ```{julia}
-h.(xs, [4,5])
+g.(xs, [4,5])
 ```
 
   * The `map` function is similar, it applies a function to each element:
@@ -1075,9 +1075,9 @@ For symbolic expressions, we have the `∇ ×` times notation is available **if*
 ```{julia}
 #| hold: true
 @syms x y z
-F = [-y, x, z]  #  but not [-y, x, 1] which errs; use `curl` with variables specified
+𝑭 = [-y, x, z]  #  but not [-y, x, 1] which errs; use `curl` with variables specified
 
-curl([-y, x, 1], (x,y,z)),  ∇×F
+curl([-y, x, 1], (x,y,z)),  ∇×𝑭
 ```
 
 ## Integrals
