--- a/quarto/precalc/trig_functions.qmd
+++ b/quarto/precalc/trig_functions.qmd
@@ -12,22 +12,6 @@ using Plots
 using SymPy
 ```
 
-```{julia}
-#| echo: false
-#| results: "hidden"
-using CalculusWithJulia.WeaveSupport
-
-fig_size = (800, 600)
-
-const frontmatter = (
-        title = "Trigonometric functions",
-        description = "Calculus with Julia: Trigonometric functions",
-        tags = ["CalculusWithJulia", "precalc", "trigonometric functions"],
-);
-
-nothing
-```
-
 ---
 
 
@@ -378,9 +362,7 @@ As can be seen, even a somewhat simple combination can produce complicated graph
 txt ="""
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rrmx2Q3sO1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 """
-tpl = CalculusWithJulia.WeaveSupport.centered_content_tpl
-txt = CalculusWithJulia.WeaveSupport.Mustache.render(tpl, content=txt, caption="Julia logo animated")
-CalculusWithJulia.WeaveSupport.HTMLoutput(txt)
+HTMLoutput(txt; centered=true, caption="Julia logo animated")
 ```
 
 ### Functions using degrees
@@ -884,4 +866,3 @@ Is this identical to the pattern for the regular sine function?
 #| echo: false
 yesnoq(false)
 ```
-
