--- a/quarto/differentiable_vector_calculus/plots_plotting.qmd
+++ b/quarto/differentiable_vector_calculus/plots_plotting.qmd
@@ -14,17 +14,6 @@ using LinearAlgebra
 using ForwardDiff
 ```
 
-```{julia}
-#| echo: false
-#| results: "hidden"
-using CalculusWithJulia.WeaveSupport
-frontmatter = (
-    title = "2D and 3D plots in Julia with Plots",
-    description = "Calculus with Julia: 2D and 3D plots in Julia with Plots",
-    tags = ["CalculusWithJulia", "differentiable_vector_calculus", "2d and 3d plots in julia with plots"],
-);
-nothing
-```
 
 ---
 
@@ -121,10 +110,10 @@ for t in ts
 end
 ```
 
-```{julia}
-#| echo: false
-note("""Adding many arrows this way would be inefficient.""")
-```
+:::{.callout-note}
+## Note
+Adding many arrows this way would be inefficient.
+:::
 
 ### Setting a viewing angle for 3D plots
 
@@ -381,10 +370,10 @@ zs = [Z(1, theta, phi) for theta in thetas, phi in phis]
 surface(xs, ys, zs)
 ```
 
-```{julia}
-#| echo: false
-note("The above may not work with all backends for `Plots`, even if those that support 3D graphics.")
-```
+:::{.callout-note}
+## Note
+The above may not work with all backends for `Plots`, even if those that support 3D graphics.
+    :::
 
 For convenience, the `plot_parametric` function from `CalculusWithJulia` can produce these plots using interval notation, `a..b`,  and a function:
 
@@ -419,4 +408,3 @@ a,b = 1,3
 f(x,y,z) = (x^2+((1+b)*y)^2+z^2-1)^3-x^2*z^3-a*y^2*z^3
 CalculusWithJulia.plot_implicit_surface(f, xlim=-2..2, ylim=-1..1, zlim=-1..2)
 ```
-
