--- a/quarto/precalc/calculator.qmd
+++ b/quarto/precalc/calculator.qmd
@@ -184,6 +184,27 @@ A right triangle has sides $a=11$ and $b=12$. Find the length of the   hypotenus
 11^2 + 12^2
 ```
 
+##### Example
+
+An article in the [Washington Post](https://www.washingtonpost.com/climate-environment/2022/09/19/ants-population-20-quadrillion/) describes estimates for the number of ants on earth.
+
+
+They describe the number of ants two ways:
+
+* There are $20$ *trillion* ants.
+* There are $12$ megatons of ants
+
+With this how many ants make up a pound?
+
+Below we use the underscore as a separator, which is parsed as commas are to separate groups of numbers. The calculation is the number of ants divided by the number of pounds of ants (one megaton is $1$ million pounds):
+
+```{julia}
+20_000_000_000_000_000 / (1_000_000 * 12 * 2000)
+```
+
+Or not quite a million per pound.
+
+
 ## Order of operations
 
 
