--- a/quarto/precalc/inversefunctions.qmd
+++ b/quarto/precalc/inversefunctions.qmd
@@ -139,10 +139,17 @@ $$
 We see that $f^{-1}(x) = 1 + (x - 2)^{1/5}$. The fact that the power $5$ is an odd power is important, as this ensures a unique (real) solution to the fifth root of a value, in the above $y-2$.
 
 
+In the section on  [polynomial roots](../precalc/polynomial_roots.html) we introduce the `solve` function of `SymPy`, which can  algebraically solve for inverse functions in easier cases.
+
+
+
 ##### Example
 
 
 The function $f(x) = x^x,  x \geq 1/e$ is strictly increasing. However, trying to algebraically solve for an inverse function will quickly run into problems (without using specially defined functions). The existence of an inverse does not imply there will always be luck in trying to find a mathematical rule defining the inverse.
+
+
+In the section on the [intermediate value theorem](../limits/intermediate_value_theorem.html#the-find_zero-function) we will see how to *numerically* solve for an inverse function.
 
 
 ## Functions which are not always invertible
